# starstats

./: .gitignore  LICENSE  README.md  build.sh  css.css  generate.cgi  generate.py  graph.plot  ircdb.cabal  remote-sync.sh  run.sh  starstats.cabal  sync.sh  template  util.js  watch.py
site/: util.js
src/: Main.hs
src/IRCDB/: DB.hs  Parser.hs  Renderer.hs  Time.hs  Watcher.hs
src/IRCDB/DB/: Connection.hs  Driver.hs  Queries.hs  Tables.hs  Utils.hs
src/StarStats/: Args.hs  File.hs  Parser.hs  Renderer.hs  Time.hs  Utils.hs  Watcher.hs
src/StarStats/DB/: Connection.hs  Driver.hs  Queries.hs  Tables.hs  Utils.hs
src/StarStats/Log/: Log.hs
src/StarStats/Parsers/: ChatZilla.hs  Common.hs  Irssi.hs  Parsers.hs  XChat.hs  ZNC.hs
